# sw4

./: .gitattributes  .gitignore  .gitmodules  .zenodo.json  CMakeLists.txt  FRONTIER.INSTALL.txt  INSTALL.txt  Jenkinfile  Makefile  Makefile.hipcc  Makefile.hippat  NOTES  NOTES.BUGS  NOTES.HIP  NOTES.PROJ  NOTES.SCR  NOTES.SPOCK  PERFORMANCE.txt  README.md  README.txt  SW4Config.h.in  distMakefile  enforceLicense.py  ftoc-conversion.txt  make.raja.rzvernal  openmpadd.txt
.github/workflows/: dependencies-linux.sh  linux-sw4mopt.yml  linux.yml
configs/: Dockerfile  FindCENCALVM.cmake  make.ansel  make.bgq  make.cab  make.chebyshev  make.cori  make.debian9  make.edison  make.fourier  make.haswell  make.inc  make.inc.cuda11gcc8.3.1c++17  make.inc.rzansel.cuda11gcc7.3c++17  make.lassen  make.linux  make.osx  make.quartz  make.quartz.fftw  make.raja.Frontier.KPP  make.raja.RU23.06  make.raja.corona  make.raja.crusher  make.raja.crusher.GPU_MPI  make.raja.crusher.RU2022.10  make.raja.crusher.RU22.03  make.raja.crusher.scr  make.raja.crusher.sw4mopt  make.raja.lassen  make.raja.lassen.RU22.03  make.raja.lassen.RU22.10  make.raja.lassen.myproj  make.raja.lassen.proj  make.raja.lassen.proj6  make.raja.lassen.rameshproj  make.raja.lassen.sw4mopt  make.raja.lassenRaja0.10Umpir1.1  make.raja.minimal  make.raja.perlmutter.gcc  make.raja.perlmutter.sw4mopt  (+65 more)
dev/: Farray.h  Makefile  README  Require.h  Sarray.C  Sarray.h  adiff.py  cfunctions.C  cfunctions.h  curvi_constants.h  fortran_functions.f90  fortran_functions_current.f90  main.C  problemsetup_new_3d.f90  sw4.h  x
dev/src/: Elastic_3D_Interface_nonconforming_cg.f90  README
dev/tex/: README
doc/: SW4-Installation.bbl  SW4-Installation.tex  SW4-UsersGuide.tex  refs.bib  sw4-refs.bib
doc/userGuideLatex/: SW4-UsersGuide.tex
docker/sw4-buildenv-bionic/: Dockerfile  README.md
docs/: GW.eps  SW4-UsersGuide-v1.tex  SW4-UsersGuide.bbl  SW4-UsersGuide.ind  SW4-UsersGuide.tex  SW4opt-UsersGuide.tex  edison-report.tex  f2-gaussianint.ps  f3-ricker.ps  ppw-err.eps  rightHandedCoord.ps
examples/: check_results.py
examples/anisotropy/: ablock-aluminum.in  ablock-cds.in  ablock-graphite-epoxy.in  ablock-inas.in  ablock-quartz.in  halfspace-inas0-h10.in  halfspace-inas0-h20.in  halfspace-inas0-h40-ghtopo.in  halfspace-inas0-h40.in  lamb-inas0-h40.in  loh1anisobl.in  loh1anisobl.output  pointsource-inas0-h10.in  pointsource-inas0-h20.in  pointsource-inas0-h40.in  pointsource.in  pointsource.output
examples/checkpoint/: checkp-att-mr.in  checkp-att.in  checkp-mr.in  checkp.in  cptest.in  cptest4.ENV  image-cp.in  image.in  run_cptest_cori.slurm  run_small_tests.slurm  straight-att-mr.in  straight-att.in  straight-mr.in  straight.in  sw4
examples/curvi-mr/: berkeley-mr-rfile.in  energy-nomr-2nd-1.in  gauss-mr.in
examples/efile/: Alumrock.in
examples/essi/: M5.5_ESSI_srf.in  README  berkeley-att-h100.in  compare3DimgESSI.m  m5.5-5.6x5.6.s200.0.v5.1.srf
examples/geomodelgrids/: berkeley-gmg.in  berkeley-gmg.out
examples/ifile/: Grenoble-q.in  Grenoble-q.out  Grenoble.in
examples/lamb/: lamb-1.in  lamb-1.out  lamb-2.in  lamb-2.out  lamb-3.in
examples/meshrefine/: berkeley-mr.in  energy-dirichlet-coarse.in  energy-dirichlet-coarse4.in  energy-dirichlet-noref.in  energy-dirichlet.in  energy-dirichlet.out  energy-loh1.in  energy-mr-sg-order2.in  energy-mr-sg-order4.in  energy-mr-sg.in  energy-periodic-coarse.in  energy-periodic-coarse4.in  energy-periodic.in  energy-periodic.out  loh1-slow-mr-order2.in  loh1-slow-mr-order4.in  loh1-slow-mr.in  loh3-slow-mr-order2.in  loh3-slow-mr-order4.in  loh3-slow-ref.in  mr+q-2nd-test.in  mr+q-4th-test.in  tw-att-mr-1.in  (+32 more)
host-configs/: lassen.cmake  rzansel.cmake  rznevada.cmake  spock.cmake  summit.cmake
inverse/: Makefile  wave.txt
iotest/: Byteswapper.h  Makefile  Parallel_IO-sw4.C  Parallel_IO-sw4.h  README  gentestfile.C  iotest.C
opt-src/: ConvParOutput.C  DataPatches.C  InterpolateMaterial.C  MaterialInvtest.C  MaterialParAllpts.C  MaterialParAllpts.h  MaterialParCartesian.C  MaterialParameterization.C  MaterialParameterization.h  Mopt.C  convert_etree.C  interpolatemtrl.f  invtestmtrl.f  lbfgs.C  optmain.C  solve-backward-allpars.C  test_proj.C
pytest/: check_results.py  hdf_only.py  quartz-debug.py  run-test-cori.slurm  run.cmd  sw4-test-cab.msub  sw4-test-cori.slurm  sw4-test-crusher.slurm  sw4-test-quartz.msub  sw4-test-summit.lsf  sw4-test.msub  test_cr  test_sw4.py  test_sw4_new.py  verify_geodynbc.py  verify_hdf5.py
pytest-sw4mopt/: test_sw4mopt.py
src/: AllDims.C  AllDims.h  AnisotropicMaterial.h  AnisotropicMaterialBlock.C  AnisotropicMaterialBlock.h  Byteswapper.h  CMakeLists.txt  CheckPoint.C  CheckPoint.h  ConvParOutput.C  ConvParOutput.h  CurvilinearInterface.C  CurvilinearInterface.h  CurvilinearInterface2.C  CurvilinearInterface2.h  DataPatches.C  DataPatches.h  ESSI3D.C  ESSI3D.h  ESSI3DHDF5.C  ESSI3DHDF5.h  EW.C  EW.h  EtreeFile.C  EtreeFile.h  F77_FUNC.h  Farray.h  Filter.C  Filter.h  ForcingTwilight.C  ForcingTwilight.h  GeographicProjection.C  GeographicProjection.h  GridGenerator.C  GridGenerator.h  GridGeneratorGaussianHill.C  GridGeneratorGaussianHill.h  GridGeneratorGeneral.C  GridGeneratorGeneral.h  GridPointSource.C  (+252 more)
src/double/: sw4.h
src/float/: sw4.h
src/quadpack/: dqaws.f  qawse.f  qc25s.f  qcheb.f  qmomo.f  r1mach.f
sw4lite/: Makefile  Makefile.cuda  Makefile.rajaOMP  README
tools/: PlotAnalyticalLOH1.m  README  ReadUHS.m  convertjday.m  curvigrid.m  diffsac.m  directform2.m  elamberr.m  fcnplot.m  fkinterp.m  fksw4comp.m  geocoord.m  gridplot.m  gridplotrect.m  imageinfo.m  l2file.m  lambtest.m  makeMRgrid.m  mybuttereven.m  mybutterodd.m  myfilter.m  myfiltfilt.m  pgv.cpt  plot_sfile.ipynb  plotcart.m  plotcurvi.m  plotfilter.m  plotgrid.m  plotimage.m  plotimage2.m  plotimagef.m  plotimagef2.m  plotimageh5.ipynb  plotsac.m  plotts.m  plotusgs.m  readar.m  readimage.m  readimage3d.m  readmat.m  (+10 more)
trunk/: Blurb.txt  INSTALL.txt  LICENSE.txt  Makefile  README.txt  distMakefile  enforceLicense.py  wave.txt
utils/: sw4stats.py  trap.C
(+2929 files in other folders)
